[build-system]
requires = ["hatchling>=0.25.1", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pact"
description = "Promises library in Python"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "BSD 3-Clause License" }

classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["flux", "Logbook>=0.12.2", "waiting"]
dynamic = ["version"]

authors = [{ name = "Rotem Yaari", email = "vmalloc@gmail.com" }]

[project.urls]
"Homepage" = "https://github.com/getslash/pact"

[project.optional-dependencies]
testing = ["pytest>4.0", "pytest-cov>=2.6", "pyforge", "pylint"]
doc = ["alabaster", "releases", "Sphinx>=1.7.1"]

[tool.hatch.version]
source = "vcs"
