[metadata]
name = pact
classifiers =
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
summary = Promises library in Python
description-file =
    README.md
description-content-type = text/markdown
license = BSD3
author = Rotem Yaari
author_email = vmalloc@gmail.com
url = https://github.com/getslash/pact

[extras]
testing =
    pytest; python_version < '3.0'
    pytest>4.0; python_version >= '3.0'
    pytest-cov<2.6; python_version < '3.0'
    pytest-cov>=2.6; python_version >= '3.0'
    pyforge
    pylint
doc =
    alabaster
    releases
    Sphinx>=1.7.1

[tool:pytest]
testpaths = tests
