[metadata]
name = pact
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
summary = Promises library in Python
description-file =
    README.md
description-content-type = text/markdown
license = BSD3
author = Rotem Yaari
author_email = vmalloc@gmail.com
url = https://github.com/getslash/pact

[extras]
testing =
    pytest>4.0
    pytest-cov>=2.6
    pyforge
    pylint
doc =
    alabaster
    releases
    Sphinx>=1.7.1

[tool:pytest]
testpaths = tests
